--- a/index.css
+++ b/index.css
@@ -151,18 +151,18 @@ h1{
 
 #History .container{
     height: auto;
-    width: 50%;
+    width: auto;
     display: inline-block;
-    text-align: justify;
-        margin: 20px;
-
+    text-align: justify; 
+     margin: 20px;
+    order: 1;
 }
 
-#History  img{
+.History_  img{
     width: 40%;
     height: auto;
     padding: 10px;
-    float: right;
+    order: 2;
     right: 50%;
 
 }
@@ -284,7 +284,7 @@ h1{
 }
 
 #Marketing{
-    background: url("https://gitlab.com/nelcido_diaz/media/-/raw/master/imagenes/blog_marketing.jpg");
+    background: url("");
     background-size: 100%;
     height: 400px;
     border-top: 5px solid rgb(226, 78, 78);
@@ -386,7 +386,7 @@ h1{
 }
 
 #footer p{
-    padding-top: 20px;
+    margin-top: 300px;
     text-align: center;
     font-variant: small-caps;
     font-style: italic;
@@ -396,17 +396,48 @@ h1{
     font-size: large;
 }
 
-#footer a{
-    position: absolute;
-    top: 700%;
-    display: inline-block;
-    margin-left: 50px;
+.social_red{
+ float: left;
+ margin: 20px;
+ display: flex;
+ flex-flow: column wrap ;
 }
-
-#footer :last-child{
-    position: absolute;
-    top: 700%;
-    display: inline-block;
-    left: 85%;
-
+.Links{
+ float: right;
+ margin: 30px;
+ display: flex;
+ flex-flow: column wrap ;
+}
+.Links li{
+    margin-top: 30px
+}
+.Links a:hover{
+ color: black;
+}
+@media only screen and (max-width: 480px){
+     
+    #Info{
+      flex-direction: column;
+      margin: 0;
+    }
+      #Info img{
+      width: auto;
+      }
+    
+    #Info .container{
+     width: auto;
+    }
+    .History_{
+        flex-direction: column;
+        margin: 0;
+      }
+      .History_ img{
+        width: auto;
+        order: 0;
+        }
+      
+      #History .container{
+       width: auto;
+       order: 2;
+      }
 }
