--- a/index.css
+++ b/index.css
@@ -284,7 +284,7 @@ h1{
 }
 
 #Marketing{
-    background: url("");
+    background: url("https://res.cloudinary.com/dbchwsjig/image/upload/v1596492999/blog_marketing_nigrtu.jpg");
     background-size: 100%;
     height: 400px;
     border-top: 5px solid rgb(226, 78, 78);
@@ -309,7 +309,7 @@ h1{
 
 
 #Code{
-    background: url("https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/blog_programacion.jpg");
+    background: url("https://res.cloudinary.com/dbchwsjig/image/upload/v1596493042/blog_programacion_gmgmq5.jpg");
     background-size: 100%;
     height: 400px;
     border-top: 5px solid rgb(226, 78, 78);
