--- a/index.css
+++ b/index.css
@@ -444,5 +444,12 @@ h1{
         top: 90%;
         margin-bottom: 0%;
         position: fixed;
+        z-index:1;
+      }
+
+      .Navigation li a {
+       margin:0%;
+       margin-right:0%;
+       bottom: 0%;
       }
 }
