--- a/index.css
+++ b/index.css
@@ -446,10 +446,14 @@ h1{
         position: fixed;
         z-index:1;
       }
-
+      .El_Nuevo{
+        display: flex;
+      }
       .Navigation li a {
        margin:0%;
        margin-right:0%;
        bottom: 0%;
+       flex-direction: column;
       }
+      
 }
