Hi nice to meet you

--- a/index.css
+++ b/index.css
@@ -454,6 +454,10 @@ h1{
        margin-right:0%;
        bottom: 0%;
        flex-direction: column;
+       text-align: center;
+      }
+      .parrafo h1{
+          display: none;
       }
       
 }
